--- a/src/webapp/crate.html
+++ b/src/webapp/crate.html
@@ -236,7 +236,13 @@
       link.setAttribute("href", `/docs/${currentVersion.index.name}/${currentVersion.index.vers}/${crateRustName}/index.html`);
       document.getElementById("meta-docs").appendChild(link);
     } else {
-      // TODO: add regen button here
+      const button = document.createElement("button");
+      button.innerText = "Generate it";
+      button.className = "focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-xs px-3 py-1 me-2 mb-1 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900";
+      button.addEventListener('click', function() {
+        apiRegenCrateDoc(currentVersion.index.name, currentVersion.index.vers);
+      });
+      document.getElementById("meta-docs").appendChild(button);
     }
     document.getElementById("tab-readme-dl-total").appendChild(document.createTextNode(
       crate.versions.reduce((acc, v) => acc + v.downloadCount, 0).toString()
